[gd_scene load_steps=3 format=3 uid="uid://kmcy5k8l3377"]

[ext_resource type="Script" uid="uid://ymynedc15y2w" path="res://src/scripts/cheats.gd" id="1_t1sge"]
[ext_resource type="Theme" uid="uid://fh5k8xpv38ul" path="res://src/themes/gui_theme.tres" id="2_by1cs"]

[node name="Cheats" type="CanvasLayer"]
script = ExtResource("1_t1sge")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -124.0
offset_bottom = 66.0
grow_horizontal = 0
theme = ExtResource("2_by1cs")

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Cheats:"
horizontal_alignment = 1

[node name="GetResources" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "get resources
"

[node name="ResetUpgrades" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "reset upgrades"

[node name="ResetLevels" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "reset levels
"

[node name="UpgradesAndLevels" type="Button" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
text = "get all upgrades
unlock all levels"

[connection signal="pressed" from="PanelContainer/HBoxContainer/GetResources" to="." method="_on_get_resources_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/ResetUpgrades" to="." method="_on_reset_upgrades_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/ResetLevels" to="." method="_on_reset_levels_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/UpgradesAndLevels" to="." method="_on_upgrades_and_levels_pressed"]
